# HTMLParser

./: Cargo.toml  Makefile  README.md  example.html
src/: grammar.pest  lib.rs  main.rs
tests/: parser_tests.rs
